<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_verification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color_profile">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:textColor="@color/white"
        android:background="@color/header"
        android:textSize="@dimen/sp_20"
        android:text="@string/verify_yourself"
        android:gravity="center"
        />
    <ImageView
        android:contentDescription="@string/applogo"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/appicon"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tv_desc_verification"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:text="@string/peotp_buddy_id"
        android:gravity="center"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        />
    <TextView
        android:id="@+id/tv_number_verification"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="@dimen/sp_18"
        android:text="@string/_9518617464834"
        android:gravity="center"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_15"
        >
        <EditText
            android:id="@+id/et_otp_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edittextstyle"
            android:hint="Enter OTP"
            android:textColorHint="@color/yellow"
            android:inputType="phone"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:maxLength="4"
            android:digits="@string/zero_9"
            />
        <TextView
            android:id="@+id/tv_resend_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textColor="@color/yellow"
            android:layout_alignParentEnd="true"
            android:paddingStart="@dimen/dp_13"
            android:paddingEnd="@dimen/dp_9"
            android:paddingTop="@dimen/dp_13"
            android:paddingBottom="@dimen/dp_5"
            android:textSize="@dimen/sp_12"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_1"
            android:background="@color/black"
            android:layout_below="@+id/et_otp_verification"
            android:layout_alignStart="@+id/et_otp_verification"
            android:layout_alignEnd="@+id/tv_resend_verification"
            android:layout_marginEnd="@dimen/dp_7"
            android:layout_marginStart="@dimen/dp_7"
            />

    </RelativeLayout>


    <Button
        android:layout_marginTop="@dimen/dp_40"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/ButtonfillStyle"
        android:text="@string/verify"
        android:onClick="verify"
        android:textColor="@color/black"
        android:background="@drawable/fill_button_pressed_selector"
        />

</LinearLayout>