<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_forgot_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hirebuddy.activity.ForgotPinActivity">


    <TextView
        android:id="@+id/header_fpin"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/fbp"
        android:background="@color/back"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        android:gravity="center"/>

    <ImageView
        android:contentDescription="@string/applogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_margin="@dimen/dp_50"
        />



    <!--PHONE NUMBER-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_number_fbp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/yellow"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <EditText
            android:id="@+id/edt_phone_fp"
            style="@style/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number_em"
            android:clickable="true"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
           />
         </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/ButtonfillStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_90"
        android:layout_marginRight="@dimen/dp_90"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/send"
        android:onClick="login"
        android:id="@+id/btn_send_fbp"
        android:background="@drawable/fill_button_pressed_selector"
        />
</LinearLayout>
