<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:id="@+id/rl_root"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow_r_cd_white"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/dp_15">

    <TextView
        android:layout_margin="@dimen/dp_15"
        android:id="@+id/tv_title_login_pop_up"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/otp_description"
        android:gravity="center"
        android:textSize="@dimen/sp_17"
        android:textStyle="bold"
        android:textColor="@color/black"
        />


    <Button
        android:layout_marginTop="@dimen/dp_15"
        android:id="@+id/btn_send"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/send"
        android:textColor="@color/white"
        android:background="@drawable/yellowfilled_button_back"
        style="@style/ButtonStyle"/>

    <Button
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/btn_cancel"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:textColor="@color/back"
        android:layout_gravity="center"/>

</LinearLayout>

</RelativeLayout>