<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_root"
    android:background="@color/login_background"
    >

    <!--HEADER-->

    <TextView
        android:id="@+id/header_login_pop_up"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/join_as"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        android:gravity="center"
        android:background="@color/header"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_gravity="center"
        />


    <Button
        android:id="@+id/btn_permanent_buddy"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_45"
        android:layout_gravity="center"
        android:text="@string/permanent_buddy"
        android:textColor="@color/white"
        android:background="@drawable/fill_button_pressed_selector"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_16"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/btn_temporary_buddy"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/temporary_buddy"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_16"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/not_fill_button_pressed_selector"/>


</LinearLayout>